--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -89,5 +89,5 @@ jobs:
         with:
           name: release-apk
           path: build/app/outputs/apk/
-    if: ${{ !startsWith(github.ref, 'refs/tags/') }}
+if: ${{ startsWith(github.ref, 'refs/tags/') }}
 
