--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,7 @@ name: Build Flutter APK's and App bundle
 on:
   # Triggers the workflow on push or pull request events but only for the "develop" branch
   push:
-    branches: 
-    - master
+    # branches: ["master"]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -41,48 +40,6 @@ jobs:
         uses: ncipollo/release-action@v1.10.0
         with:
           artifacts: "build/app/outputs/apk/release/*.apk, build/app/outputs/bundle/release/*.aab"
-          tag: v1.0.${{ github.run_number }}
-
-      - name: Upload a Build Artifact
-        uses: actions/upload-artifact@v3.1.0
-        with:
-          name: release-apk
-          path: build/app/outputs/apk/
-          name: Build Flutter APK's and App bundle
-
-on:
-  push:
-    branches:
-      - '*'
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - uses: subosito/flutter-action@v2
-        with:
-          channel: "stable"
-      - run: flutter doctor -v
-
-      - name: Checkout flutter_app code
-        uses: actions/checkout@v3
-      - run: flutter pub get
-
-      - name: Build APK
-        run: flutter build apk --split-per-abi --release
-
-      - name: Build APP BUNDLE
-        run: flutter build appbundle
-
-      - name: Create Release
-        uses: ncipollo/release-action@v1.10.0
-        with:
-          artifacts: "build/app/outputs/apk/release/*.apk, build/app/outputs/bundle/release/*.aab"
 
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v3.1.0
@@ -90,4 +47,3 @@ jobs:
           name: release-apk
           path: build/app/outputs/apk/
 if: ${{ startsWith(github.ref, 'refs/tags/') }}
-
