--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,10 @@ name: Build Flutter APK's and App bundle
 on:
   # Triggers the workflow on push or pull request events but only for the "develop" branch
   push:
-    # branches: ["master"]
+    branches: 
+      -master
+    tags:
+      - '*'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -46,4 +49,4 @@ jobs:
         with:
           name: release-apk
           path: build/app/outputs/apk/
-if: ${{ startsWith(github.ref, 'refs/tags/') }}
+ 
