--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,45 +1,53 @@
 name: Build Flutter APK's and App bundle
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-
-    steps:
-      - uses: actions/checkout@v3
-
-      # Set up Flutter.
-      - uses: subosito/flutter-action@v2
-        with:
-          channel: "stable"
-      - run: flutter doctor -v
-
-      # Checkout the repository code and get packages.
-      - name: Checkout flutter_app code
-        uses: actions/checkout@v3
-      - run: flutter pub get
-
-      - name: Build APK
-        run: flutter build apk --split-per-abi --release
-
-      - name: Build APP BUNDLE
-        run: flutter build appbundle
-
-      - name: Create Release
-        uses: ncipollo/release-action@v1.10.0
-        with:
-          artifacts: "build/app/outputs/apk/release/*.apk, build/app/outputs/bundle/release/*.aab"
-
-      - name: Upload a Build Artifact
-        uses: actions/upload-artifact@v3.1.0
-        with:
-          name: release-apk
-          path: build/app/outputs/apk/
-
 on:
   push:
     branches:
       - master
     tags:
       - '*'
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: "stable"
+      - run: flutter doctor -v
+
+      - name: Checkout flutter_app code
+        uses: actions/checkout@v2
+
+      - name: Install Flutter dependencies
+        run: flutter pub get
+
+      - name: Create APK Folder
+        run: mkdir -p apk
+
+      - name: Build APK
+        run: flutter build apk --split-per-abi --release
+
+      - name: Move APK Files to Repository
+        run: mv build/app/outputs/apk/release/*.apk apk/
+
+      - name: Commit APKs to Repository
+        run: |
+          git config user.name "Your Name"
+          git config user.email "youremail@example.com"
+          git add apk/*.apk
+          git commit -m "Add APK files"
+          git push
+
+  access_apks:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Access APKs
+        run: |
+          # Now you can access the APK files from the 'apk' folder in your repository
+          ls apk/
