--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
         run: flutter build apk --debug
 
       - name: Move APK Files to 'apk' Folder
-        run: mv build/app/outputs/apk/release/*.apk apk/
+        run: mv build/app/outputs/flutter-apk/app-debug.apk apk/
 
       - name: Commit APKs to Repository
         run: |
