--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  rename_app: ^1.3.1
 
 dev_dependencies:
+  change_app_package_name: ^1.1.0
+  flutter_launcher_icons: "^0.13.1"
   flutter_test:
     sdk: flutter
 
