--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - master
-    tags:
-      - '*'
+    paths:
+      - 'package-name.txt' # Specify the path to the package name file
 
 jobs:
   build:
@@ -24,7 +24,6 @@ jobs:
         run: |
           echo "org.gradle.jvmargs=-Xmx2048m" >> $GITHUB_WORKSPACE/android/gradle.properties
 
-
       - name: Checkout flutter_app code
         uses: actions/checkout@v2
 
@@ -34,13 +33,17 @@ jobs:
       - name: Create 'apk' Folder if Not Exist
         run: mkdir -p apk
 
+      # Use a conditional check to skip these steps for specific tags
       - name: Build APK
+        if: "!contains(github.ref, 'skip-apk-build')"
         run: flutter build apk --debug
 
       - name: Move APK Files to 'apk' Folder
         run: mv build/app/outputs/flutter-apk/app-debug.apk apk/
 
+      # Use a conditional check to skip these steps for specific tags
       - name: Commit APKs to Repository
+        if: "!contains(github.ref, 'skip-apk-commit')"
         run: |
           git config user.name "Your Name"
           git config user.email "youremail@example.com"
@@ -48,14 +51,42 @@ jobs:
           git commit -m "Add APK files"
           git push
 
-  access_apks:
+  change_package_name:
     runs-on: ubuntu-latest
+    needs: build
 
     steps:
-      - name: Access 'apk' Folder and APKs
+      - uses: actions/checkout@v2
+
+      - name: Check if package-name.txt has changed
+        id: check-file-change
         run: |
-          # Create 'apk' folder if it doesn't exist
-          mkdir -p apk
-          
-          # Now you can access the 'apk' folder and APK files
-          ls apk/
+          if git diff --quiet HEAD^ HEAD -- package-name.txt; then
+            echo "File 'package-name.txt' has not changed. Skipping package name change."
+            echo "::set-output name=changed::false"
+          else
+            echo "File 'package-name.txt' has changed. Proceeding with package name change."
+            echo "::set-output name=changed::true"
+          fi
+
+      - name: Read data from a file
+        if: steps.check-file-change.outputs.changed == 'true'
+        run: |
+          # Read the data from a file in your repository and store it as an environment variable
+          export PACKAGE_NAME=$(<package-name.txt)
+
+      - name: Change Flutter App Package Name
+        if: steps.check-file-change.outputs.changed == 'true'
+        run: |
+          # Use the stored environment variable to change the package name
+          flutter pub run change_app_package_name:main $PACKAGE_NAME
+
+      - name: Commit and Push Changes
+        if: steps.check-file-change.outputs.changed == 'true'
+        run: |
+          # Commit and push the changes to your repository
+          git config user.name "Your Name"
+          git config user.email "youremail@example.com"
+          git add .
+          git commit -m "Change package name to $PACKAGE_NAME"
+          git push
