--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Check out the repository
+        uses: actions/checkout@v2
 
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
@@ -23,9 +24,6 @@ jobs:
       - name: Set up Gradle
         run: |
           echo "org.gradle.jvmargs=-Xmx2048m" >> $GITHUB_WORKSPACE/android/gradle.properties
-
-      - name: Checkout flutter_app code
-        uses: actions/checkout@v2
 
       - name: Install Flutter dependencies
         run: flutter pub get
@@ -47,16 +45,24 @@ jobs:
       - name: Read data from a file
         if: steps.check-file-change.outputs.changed == 'true'
         run: |
+          # Debug - List Repository Contents
+          ls -R
+
+          # Debug - Check Package Name File
+          cat package-name.txt
+
           # Read the data from a file in your repository and store it as an environment variable
           export PACKAGE_NAME=$(<package-name.txt)
 
       - name: Change Flutter App Package Name
         if: steps.check-file-change.outputs.changed == 'true'
         run: |
+          # Debug - Verify the PACKAGE_NAME variable
+          echo "PACKAGE_NAME is set to: $PACKAGE_NAME"
+
           # Use the stored environment variable to change the package name
           flutter pub run change_app_package_name:main $PACKAGE_NAME
 
-      # Use a conditional check to skip these steps for specific tags
       - name: Build APK
         run: flutter build apk --debug
 
@@ -68,7 +74,8 @@ jobs:
     needs: build
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Check out the repository
+        uses: actions/checkout@v2
 
       - name: Check if package name has changed
         id: check-package-change
