--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,16 +51,8 @@ jobs:
           # Read the data from a file in your repository and store it as an environment variable
           export PACKAGE_NAME=$(<package-name.txt)
           echo "PACKAGE_NAME is set to: ${PACKAGE_NAME}"
+          flutter pub run change_app_package_name:main $PACKAGE_NAME
              
-
-      - name: Change Flutter App Package Name
-        if: steps.check-file-change.outputs.changed == 'true'
-        run: |
-          # Debug - Verify the PACKAGE_NAME variable
-          echo "PACKAGE_NAME is set to: ${PACKAGE_NAME}"
-
-          # Use the stored environment variable to change the package name
-          flutter pub run change_app_package_name:main com.example.violet
 
       - name: Build APK
         run: flutter build apk --debug
@@ -82,10 +74,10 @@ jobs:
       - name: List Staged Files
         run: git diff --cached --name-only
 
-      - name: Commit and Push Changes
+      - name: Commit APKs to Repository
         run: |
-          git add .
-          git status  # Added for debugging
-          git diff --cached --name-only  # Added for debugging
-          git commit -m "New Commit Without Dynamic Package Variable"
+          git config user.name "Coder"
+          git config user.email "youremail@example.com"
+          git add apk/*.apk
+          git commit -m "Add APK files"
           git push
