--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,10 +21,6 @@ jobs:
           channel: "stable"
       - run: flutter doctor -v
 
-      - name: Set up Gradle
-        run: |
-          echo "org.gradle.jvmargs=-Xmx2048m" >> $GITHUB_WORKSPACE/android/gradle.properties
-
       - name: Install Flutter dependencies
         run: flutter pub get
 
@@ -54,10 +50,10 @@ jobs:
           flutter pub run change_app_package_name:main $PACKAGE_NAME
             
       - name: Build APK
-        run: flutter build apk --debug
+        run: flutter build apk --split-per-abi --release
 
       - name: Move APK Files to 'apk' Folder
-        run: mv build/app/outputs/flutter-apk/app-debug.apk apk/
+        run: mv build/app/outputs/apk/release/*.apk apk/
 
       - name: List Changed Files
         run: git status
@@ -68,7 +64,7 @@ jobs:
       - name: Commit APKs to Repository
         run: |
           git config user.name "Coder"
-          git config user.email "youremail@example.com"
+          git config user.email "gitCoder@example.com"
           git add apk/*.apk
           git commit -m "Add APK files"
           git push
