--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,6 +48,9 @@ jobs:
           export PACKAGE_NAME=$(<package-name.txt)
           echo "PACKAGE_NAME is set to: ${PACKAGE_NAME}"
           flutter pub run change_app_package_name:main $PACKAGE_NAME
+          git add .
+          git status
+          git branch 
             
       - name: Build APK
         run: flutter build apk --split-per-abi --release
