Commit is working APK staging chnages Orange

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,8 +56,10 @@ jobs:
         run: flutter build apk --split-per-abi --release
 
       - name: Move APK Files to 'apk' Folder
-        run: mv build/app/outputs/apk/release/*.apk apk/
-
+        run: 
+          mv build/app/outputs/apk/release/*.apk apk/
+          git add .
+          
       - name: List Changed Files
         run: git status
 
