--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,10 +56,8 @@ jobs:
         run: flutter build apk --split-per-abi --release
 
       - name: Move APK Files to 'apk' Folder
-        run: 
-          mv build/app/outputs/apk/release/*.apk apk/
-          git add .
-          
+        run: mv build/app/outputs/apk/release/*.apk apk/
+     
       - name: List Changed Files
         run: git status
 
@@ -71,5 +69,5 @@ jobs:
           git config user.name "Coder"
           git config user.email "gitCoder@example.com"
           git add apk/*.apk
-          git commit -m "Add APK files"
+          git commit -m "Added Changed APK files"
           git push
