--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,13 +16,15 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Flutter
-        uses: subosito/flutter-action@v2
+        uses: subosito/flutter-action@v3
         with:
           channel: "stable"
       - run: flutter doctor -v
 
       - name: Install Flutter dependencies
-        run: flutter pub get
+        run: 
+          flutter clean
+          flutter pub get
 
       - name: Create 'apk' Folder if Not Exist
         run: mkdir -p apk
