--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,10 @@ jobs:
     steps:
       - name: Check out the repository
         uses: actions/checkout@v3
+      - uses: actions/setup-java@v2
+        with:
+          distribution: 'zulu'
+          java-version: '11'
 
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
@@ -54,7 +58,8 @@ jobs:
           flutter pub run change_app_package_name:main $PACKAGE_NAME
           git add .
           git status
-          git branch 
+          git branch
+          flutter doctor -v
             
       - name: Build APK
         run: flutter build apk --split-per-abi --release
