--- a/apk.config.json
+++ b/apk.config.json
@@ -1,1 +1,5 @@
-{"package_name": "com.purple.glue", "organization_code": "org007" }
+{
+  "package_name": "com.amazing.burgers",
+  "organization_code": "F&B",
+  "app_name": "Am Burg"
+}
