--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-     "name": "Magenta",
-     "short_name": "Magenta",
+     "name": "Am Burg",
+     "short_name": "Am Burg",
      "start_url": ".",
      "display": "standalone",
      "background_color": "#0175C2",
