--- a/apk.config.json
+++ b/apk.config.json
@@ -1,5 +1,5 @@
 {
-  "package_name": "com.amazing.burgers",
+  "package_name": "com.flipping.carrots",
   "organization_code": "F&B",
-  "app_name": "Am Burg"
+  "app_name": "Flippo"
 }
