--- a/apk.config.json
+++ b/apk.config.json
@@ -1,5 +1,5 @@
 {
-  "package_name": "com.flipping.carrots",
-  "organization_code": "F&B",
-  "app_name": "Flippo"
+  "package_name": "com.icc.wc",
+  "organization_code": "Cricket07",
+  "app_name": "Cricket"
 }
