Added Changed APK files

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-     "name": "Flippo",
-     "short_name": "Flippo",
+     "name": "Cricket",
+     "short_name": "Cricket",
      "start_url": ".",
      "display": "standalone",
      "background_color": "#0175C2",
