--- a/apk.config.json
+++ b/apk.config.json
@@ -1,5 +1,5 @@
 {
-  "package_name": "com.icc.wc",
-  "organization_code": "Cricket07",
-  "app_name": "Cricket"
+  "package_name": "com.dun.ki",
+  "organization_code": "Heloo",
+  "app_name": "Mellow"
 }
