--- a/apk.config.json
+++ b/apk.config.json
@@ -1,5 +1,5 @@
 {
-  "package_name": "com.dun.ki",
-  "organization_code": "Heloo",
-  "app_name": "Mellow"
+  "package_name": "com.dulin.pub",
+  "organization_code": "Gor",
+  "app_name": "Pizzaflow"
 }
