Added Changed APK files

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-     "name": "Mellow",
-     "short_name": "Mellow",
+     "name": "Pizzaflow",
+     "short_name": "Pizzaflow",
      "start_url": ".",
      "display": "standalone",
      "background_color": "#0175C2",
