--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,30 @@
-name: Build Flutter APK's and App bundle
+name: Build and Distribute Nightly APKs
 
 on:
   workflow_dispatch:
     inputs:
-      package_name:
-        description: 'Custom package name for the build'
+      client_name:
+        description: 'Client Name'
         required: true
         type: string
-      organization_code:
-        description: 'Organization code for the build'
+      client_id:
+        description: 'Client Id for Identifying Unique User'
+        required: true
+        type: string
+      project_id:
+        description: 'Project ID for indexing in DB for the build'
+        required: true
+        type: string
+      package_name:
+        description: 'Package name for the build'
         required: true
         type: string
       app_name:
-        description: 'New app name'
+        description: 'App Name/Label'
+        required: true
+        type: string
+      branch:
+        description: 'Branch name for nightly build (e.g., main)'
         required: true
         type: string
 
@@ -22,7 +34,7 @@ jobs:
 
     steps:
       - name: Check out the repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
       - uses: actions/setup-java@v2
         with:
@@ -35,13 +47,11 @@ jobs:
           channel: "stable"
           flutter-version: '3.13.6'
 
-      - run: 
-          yes | flutter doctor --android-licenses
-          flutter doctor -v
+      - run: yes | flutter doctor --android-licenses
+             flutter doctor -v
 
       - name: Install Flutter dependencies
-        run: 
-          flutter pub get
+        run: flutter pub get
 
       - name: Create 'apk' Folder if Not Exist
         run: mkdir -p apk
@@ -49,40 +59,41 @@ jobs:
       - name: Create APK Config JSON
         run: |
           echo '{
+            "client_name": "${{ inputs.client_name }}",
+            "client_id": "${{ inputs.client_id }}",
+            "project_id": "${{ inputs.project_id }}",
             "package_name": "${{ inputs.package_name }}",
-            "organization_code": "${{ inputs.organization_code }}",
             "app_name": "${{ inputs.app_name }}"
-          }' > apk.config.json
-          git config user.name "Coder"
-          git config user.email "gitCoder@example.com"
-          git add apk.config.json
-          git commit -m "Added apk.config.json"
-          git push
+          }' > assets/json/code.json
 
-      - name: Show APK Config JSON File
-        run: cat apk.config.json
+      - name: Show Code JSON File
+        run: cat assets/json/code.json
 
       - name: Use Input Values
         run: |
           PACKAGE_NAME="${{ inputs.package_name }}"
           APP_NAME="${{ inputs.app_name }}"
+          BRANCH_NAME="${{ inputs.branch }}"
           echo "Using package name provided in workflow dispatch: $PACKAGE_NAME"
           echo "Using app name provided in workflow dispatch: $APP_NAME"
+          echo "Using branch name provided in workflow dispatch: $BRANCH_NAME"
           dart run rename_app:main all="$APP_NAME"
           flutter pub run change_app_package_name:main "$PACKAGE_NAME"
-          git add .
-          git status
-          git branch
-          flutter doctor -v
-
-      - name: Create a Downloads Directory
-        run: mkdir -p downloads
 
       - name: Build APK
         run: flutter build apk --split-per-abi --release
 
       - name: Move APK Files to 'apk' Folder
         run: mv build/app/outputs/apk/release/*.apk apk/
+
+      - name: Upload APKs to nightly.link
+        run: |
+          for apk_file in apk/*.apk; do
+            response=$(curl -X POST -F "file=@$apk_file" -F "version=${{ github.run_number }}" \
+              -F "slug=${{ github.repository }}" -F "branch=$BRANCH_NAME" \
+              https://nightly.link/upload/)
+            echo "Upload response for $apk_file: $response"
+          done
 
       - name: List Changed Files
         run: git status
@@ -95,32 +106,34 @@ jobs:
           git add apk/*.apk
           git commit -m "Added Changed APK files"
           git push
-      
+
+      - name: Send email with Nightly APK link
+        run: |
+          NIGHTLY_LINK="https://nightly.link/${{ github.repository }}/workflows/${{ github.workflow }}/${{ inputs.branch }}"
+          echo "Nightly APK Download Link: $NIGHTLY_LINK"
+        env:
+          NIGHTLY_LINK: ${{ steps.upload.outputs.upload_url }}
+
       - name: Upload APK Artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v2
         with:
           name: apks
           path: apk/*.apk
           retention-days: 5
 
-      - name: Download Specific APK File
-        uses: actions/download-artifact@v2
-        with:
-          name: apks
-          path: downloads/
-
-      - name: Send email with Specific APK File
+      - name: Send email with Nightly APK link
         uses: dawidd6/action-send-mail@v2
         with:
           server_address: smtp.gmail.com
           server_port: 465
-          username: ${{ secrets.MAIL_ADDRESS }}  # Reference a GitHub Secret for the username
-          password: ${{ secrets.TUNNEL_MAIL }}  # Reference a GitHub Secret for the password
-          subject: "Specific APK Build on ${{ github.repository }}: Success"
+          username: ${{ secrets.MAIL_ADDRESS }}
+          password: ${{ secrets.TUNNEL_MAIL }}
+          subject: "Nightly APK Build on ${{ github.repository }}: Success"
           body: |
-              Workflow: ${{ github.workflow }}
-              Repository: ${{ github.repository }}
-              Status: Success
-          to: ${{ secrets.CLIENT_MAIL_ADDRESS }}  # Reference a GitHub Secret for the recipient email
-          from: ${{ secrets.MAIL_ADDRESS }}  # Reference a GitHub Secret for the sender email
-          attachments: downloads/app-x86_64-release.apk
+                Workflow: ${{ github.workflow }}
+                Repository: ${{ github.repository }}
+                Status: Success
+                Nightly APK Download Link: ${{ env.NIGHTLY_LINK }}
+          to: ${{ secrets.MAIL_ADDRESS }}
+          from: ${{ secrets.MAIL_ADDRESS }}
+        
