--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,12 +59,17 @@ jobs:
       - name: Create APK Config JSON
         run: |
           echo '{
-            "client_name": "${{ inputs.client_name }}",
-            "client_id": "${{ inputs.client_id }}",
+            "client_name": "${{inputs.client_name}}",
+            "client_id": "${{inputs.client_id}}",
             "project_id": "${{ inputs.project_id }}",
             "package_name": "${{ inputs.package_name }}",
             "app_name": "${{ inputs.app_name }}"
           }' > assets/json/code.json
+          git config user.name "hemos811"
+          git config user.email "811.hemanthkumar@gmail.com"
+          git add assets/json/code.json
+          git commit -m "Added code.json using WorkFlow"
+          git push
 
       - name: Show Code JSON File
         run: cat assets/json/code.json
