--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,20 +32,39 @@ jobs:
       - name: Check out the repository
         uses: actions/checkout@v2
 
-      - uses: actions/setup-java@v2
+      - name: Cache Flutter dependencies
+        uses: actions/cache@v2
         with:
-          distribution: 'zulu'
-          java-version: '11'
+          path: |
+            **/flutter/.pub-cache
+          key: ${{ runner.os }}-flutter-${{ hashFiles('**/pubspec.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-flutter-
 
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
           channel: "stable"
           flutter-version: '3.13.6'
+          cache: path: .pub-cache
+
+      - name: Cache Gradle dependencies
+        uses: actions/cache@v2
+        with:
+          path: |
+            **/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
+      - uses: actions/setup-java@v2
+        with:
+          distribution: 'zulu'
+          java-version: '11'
 
       - name: Accept Android licenses and run flutter doctor
         run: |
-          yes | flutter doctor --android-licenses
+          echo "y" | flutter doctor --android-licenses
           flutter doctor -v
 
       - name: Install Flutter dependencies
@@ -93,8 +112,10 @@ jobs:
       - name: List Staged Files
         run: git diff --cached --name-only
 
-      - name: Commit APKs to Repository
+      - name: Commit and push APKs to Repository
         run: |
+          git config user.name "hemos811"
+          git config user.email "811.hemanthkumar@gmail.com"
           git add apk/*.apk
           git commit -m "Added Changed APK files"
           git push
