--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build and Distribute Nightly APKs
+name: Build and Email APK's
 
 on:
   workflow_dispatch:
@@ -32,21 +32,22 @@ jobs:
       - name: Check out the repository
         uses: actions/checkout@v2
 
-      - name: Cache Flutter dependencies
-        uses: actions/cache@v2
-        with:
-          path: |
-            **/flutter/.pub-cache
-          key: ${{ runner.os }}-flutter-${{ hashFiles('**/pubspec.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-flutter-
-
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
           channel: "stable"
           flutter-version: '3.13.6'
-          cache: path: .pub-cache
+        env:
+          PUB_CACHE: ${{ github.workspace }}/.pub-cache
+
+      - name: Cache Flutter dependencies
+        uses: actions/cache@v2
+        with:
+          path: |
+            ${{ env.PUB_CACHE }}
+          key: ${{ runner.os }}-flutter-${{ hashFiles('**/pubspec.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-flutter-
 
       - name: Cache Gradle dependencies
         uses: actions/cache@v2
