--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,7 +65,7 @@ jobs:
 
       - name: Accept Android licenses and run flutter doctor
         run: |
-          echo "y" | flutter doctor --android-licenses
+          yes | flutter doctor --android-licenses
           flutter doctor -v
 
       - name: Install Flutter dependencies
@@ -102,8 +102,7 @@ jobs:
           flutter pub run change_app_package_name:main "$PACKAGE_NAME"
 
       - name: Build APK
-        run: flutter build apk --split-per-abi --release
-
+        run: flutter build  --release
       - name: Move APK Files to 'apk' Folder
         run: mv build/app/outputs/apk/release/*.apk apk/
 
